[build-system]
requires = [
  "hatch-vcs",
  "hatchling"
]
build-backend = "hatchling.build"


[project]
name = "riemapp"
authors = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@gmail.com" },
  { name = "Naman Priyadarshi", email = "namanpriyadarshicr7@gmail.com" },
  { name = "Onkar Mahapatra", email = "onkarmahapatra627@gmail.com" },
  { name = "Parth Tripathi", email = "parthxtripathi03@gmail.com" },
  { name = "Saransh Chopra", email = "saransh0701@gmail.com" },
]
description = "Complex mappings using manim."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "typing_extensions >=3.7; python_version<'3.8'",
  "manim >=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "Sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
]

[project.urls]
Homepage = "https://github.com/Saransh-cpp/riemapp"
"Bug Tracker" = "https://github.com/Saransh-cpp/riemapp/issues"
Discussions = "https://github.com/Saransh-cpp/riemapp/discussions"
Changelog = "https://github.com/Saransh-cpp/riemapp/releases"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "riemapp/version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "riemapp"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.isort]
profile = "black"
