[build-system]
requires = [
  "hatch-vcs",
  "hatchling"
]
build-backend = "hatchling.build"


[project]
name = "riemapp"
authors = [
  { name = "Saransh Chopra", email = "saransh0701@gmail.com" },
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@gmail.com" },
  { name = "Naman Priyadarshi", email = "namanpriyadarshicr7@gmail.com" },
  { name = "Onkar Mahapatra", email = "onkarmahapatra627@gmail.com" },
  { name = "Parth Tripathi", email = "parthxtripathi03@gmail.com" },
]
description = "Manim powered complex mappings."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "typing_extensions >=3.7; python_version<'3.8'",
  "manim >=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "markdown-callouts>=0.2.0",
  "mkdocs>=1.3.1",
  "mkdocs-include-exclude-files>=0.0.1",
  "mkdocs-jupyter>=0.21.0",
  "mkdocs-material>=8.3.9",
  "mkdocstrings-python>=0.7.1",
  "mkdocstrings-python-legacy>=0.2.3",
  "pymdown-extensions>=9.5",
]

[project.urls]
Homepage = "https://github.com/Saransh-cpp/riemapp"
"Bug Tracker" = "https://github.com/Saransh-cpp/riemapp/issues"
Discussions = "https://github.com/Saransh-cpp/riemapp/discussions"
Changelog = "https://riemapp.readthedocs.io/en/latest/changelog/"
Documentation = "https://riemapp.readthedocs.io/"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "riemapp/version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "riemapp"
python_version = "3.8"
strict = true
warn_return_any = false
show_error_codes = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_subclassing_any = false
ignore_missing_imports = true


[tool.isort]
profile = "black"
