[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "riemapp"
description = "Manim powered complex mappings."
readme = "README.md"
authors = [
  { name = "Saransh Chopra", email = "saransh0701@gmail.com" },
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@gmail.com" },
  { name = "Naman Priyadarshi", email = "namanpriyadarshicr7@gmail.com" },
  { name = "Onkar Mahapatra", email = "onkarmahapatra627@gmail.com" },
  { name = "Parth Tripathi", email = "parthxtripathi03@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "manim>=0.16",
]
[project.optional-dependencies]
dev = [
  "pytest>=6",
  "pytest-cov>=3",
]
docs = [
  "markdown-callouts>=0.2",
  "mkdocs>=1.3.1",
  "mkdocs-include-exclude-files>=0.0.1",
  "mkdocs-jupyter>=0.21",
  "mkdocs-material>=8.3.9",
  "mkdocstrings-python>=0.7.1",
  "mkdocstrings-python-legacy>=0.2.3",
  "pymdown-extensions>=9.5",
]
test = [
  "pytest>=6",
  "pytest-cov>=3",
]
[project.urls]
"Bug Tracker" = "https://github.com/Saransh-cpp/riemapp/issues"
Changelog = "https://riemapp.readthedocs.io/en/latest/changelog/"
Discussions = "https://github.com/Saransh-cpp/riemapp/discussions"
Documentation = "https://riemapp.readthedocs.io/"
Homepage = "https://github.com/Saransh-cpp/riemapp"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "riemapp/version.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.mypy]
files = "riemapp"
python_version = "3.8"
strict = true
warn_return_any = false
show_error_codes = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_subclassing_any = false
ignore_missing_imports = true
